@@ -1,3 +1,7 @@
+2008-10-11   D. V. Wiebe <getdata@ketiltrout.net>  svn:133
+	* src/open.c (_GD_Tokenise _GD_ParseFormatLine): Split tokeniser from line
+	parser.
+
 2008-10-10   D. V. Wiebe <getdata@ketiltrout.net>  svn:132
 	* src/open.c (_GD_ParseFormatFile _GD_ParseFormatLine dirfile_open):
 	Properly propagate standards.
